sessao-05-06/06-networkpolicy/pod-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: lab-admin
  labels:
    role: client
spec:
  restartPolicy: Never
  containers:
    - name: client
      image: nicolaka/netshoot:v0.16
      command: ["sh", "-c", "sleep 3600"]
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 200m
          memory: 256Mi
