sessao-05-06/06-networkpolicy/allow-app-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-symfony-egress-to-postgres
  namespace: lab-admin
spec:
  podSelector:
    matchLabels:
      app: symfony
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress-from-symfony
  namespace: lab-admin
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: symfony
      ports:
        - protocol: TCP
          port: 5432
