sessao-05-06/06-networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: lab-admin
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
